--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,26 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      KT-AIR
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div class="showhead">
+    <img src="assets/imgs/a.png" ait="">
+  </div>
+  <ion-list>
+    <ion-item (click)="gotoAbout()">
+      <ion-icon name="home"></ion-icon> KT-AIR1
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="planet"></ion-icon> KT-AIR2
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="photos"></ion-icon> KT-AIR3
+    </ion-item>
+  </ion-list>
 </ion-content>
