--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,11 +15,11 @@
       <ion-icon name="home"></ion-icon> KT-AIR1
     </ion-item>
 
-    <ion-item>
+    <ion-item (click)="gotoContact()">
       <ion-icon name="planet"></ion-icon> KT-AIR2
     </ion-item>
 
-    <ion-item>
+    <ion-item (click)="gotoLmagePage()">
       <ion-icon name="photos"></ion-icon> KT-AIR3
     </ion-item>
   </ion-list>
