--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,5 +22,9 @@
     <ion-item (click)="gotoLmagePage()">
       <ion-icon name="photos"></ion-icon> KT-AIR3
     </ion-item>
+
+    <ion-item (click)="gotoSlidesPage()">
+      <ion-icon name="photos"></ion-icon> KT-Slides
+    </ion-item>
   </ion-list>
 </ion-content>
