--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,15 +12,15 @@
   </div>
   <ion-list>
     <ion-item (click)="gotoAbout()">
-      <ion-icon name="home"></ion-icon> KT-AIR1
+      <ion-icon name="home"></ion-icon> KT-About
     </ion-item>
 
     <ion-item (click)="gotoContact()">
-      <ion-icon name="planet"></ion-icon> KT-AIR2
+      <ion-icon name="planet"></ion-icon> KT-Contact
     </ion-item>
 
     <ion-item (click)="gotoLmagePage()">
-      <ion-icon name="photos"></ion-icon> KT-AIR3
+      <ion-icon name="photos"></ion-icon> KT-Image
     </ion-item>
 
     <ion-item (click)="gotoSlidesPage()">
